[gd_scene load_steps=3 format=3 uid="uid://cvxgfhsb77lc8"]

[ext_resource type="Theme" uid="uid://b5t2n5vo5hle5" path="res://IngameSettings/code/themes/settingTheme.tres" id="1_you43"]
[ext_resource type="Script" path="res://IngameSettings/code/ingame_settings.gd" id="2_pebky"]

[node name="IngameSettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_you43")
script = ExtResource("2_pebky")

[node name="MarginContainer" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(600, 400)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -17.0
offset_bottom = 17.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = -5
theme_override_constants/margin_bottom = -5

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2"]
layout_mode = 2

[node name="SettingsCategory" type="TabBar" parent="MarginContainer/VBoxContainer2/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
tab_count = 4
tab_0/title = "Video"
tab_1/title = "Audio"
tab_2/title = "Network"
tab_3/title = "Quality"

[node name="VideoSettingsPanel" type="Panel" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_you43")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Aspect" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblAspect" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Aspect Ratio :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OBtnAspect" type="OptionButton" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 2
icon_alignment = 2
item_count = 2
selected = 1
popup/item_0/text = "4:3"
popup/item_0/id = 0
popup/item_1/text = "16:9"
popup/item_1/id = 1

[node name="Resolution" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblResolution" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Resolution :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OBtnResolution" type="OptionButton" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 2
icon_alignment = 2
item_count = 18
selected = 7
popup/item_0/text = "240x136"
popup/item_0/id = 0
popup/item_1/text = "480x272"
popup/item_1/id = 1
popup/item_2/text = "640x360"
popup/item_2/id = 2
popup/item_3/text = "848x480"
popup/item_3/id = 3
popup/item_4/text = "960x540"
popup/item_4/id = 4
popup/item_5/text = "1024x600"
popup/item_5/id = 5
popup/item_6/text = "1136x640"
popup/item_6/id = 6
popup/item_7/text = "1152x648"
popup/item_7/id = 7
popup/item_8/text = "1280x720"
popup/item_8/id = 8
popup/item_9/text = "1366x768"
popup/item_9/id = 9
popup/item_10/text = "1600x900"
popup/item_10/id = 10
popup/item_11/text = "1920x1080"
popup/item_11/id = 11
popup/item_12/text = "2048x1152"
popup/item_12/id = 12
popup/item_13/text = "2560x1440"
popup/item_13/id = 13
popup/item_14/text = "3200x1800"
popup/item_14/id = 14
popup/item_15/text = "4096x2304"
popup/item_15/id = 15
popup/item_16/text = "4480x2520"
popup/item_16/id = 16
popup/item_17/text = "5120x2880"
popup/item_17/id = 17

[node name="Fullscreen" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblFullscreen" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen/HBoxContainer"]
layout_mode = 2
text = "Fullscreen :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbFullscreen" type="CheckBox" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
button_pressed = true

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="ForcedFPS" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblFullscreen" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS/HBoxContainer"]
layout_mode = 2
text = "FPS :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS"]
layout_mode = 2
size_flags_horizontal = 3

[node name="FPSValue" type="LineEdit" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
alignment = 2

[node name="VSync" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LblFullscreen" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync/HBoxContainer"]
layout_mode = 2
text = "VSync :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbVSync" type="CheckBox" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="MSaa" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa/HBoxContainer"]
layout_mode = 2
text = "MSAA :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa"]
layout_mode = 2
size_flags_horizontal = 3

[node name="OBtnMsaa" type="OptionButton" parent="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="AudioSettingsPanel" type="Panel" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_you43")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MasterVolume" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume/HBoxContainer"]
layout_mode = 2
text = "Master Volume :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HSMasterVolume" type="HSlider" parent="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
value = 50.0

[node name="NetworkSettingsPanel" type="Panel" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_you43")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Port" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port/HBoxContainer"]
layout_mode = 2
text = "Port :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LEPort" type="LineEdit" parent="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="QualitySettingsPanel" type="Panel" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("1_you43")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
grow_horizontal = 2

[node name="Quality" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality/HBoxContainer"]
layout_mode = 2
text = "Quality Preset :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ObtnQualityPreset" type="OptionButton" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="AmbientOcclusion" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion/HBoxContainer"]
layout_mode = 2
text = "Ambient Occlusion :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbAmbientOcclusion" type="CheckBox" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="IndirectLighting" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting/HBoxContainer"]
layout_mode = 2
text = "Indirect Lighting :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbIndirectLighting" type="CheckBox" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="GlobalIllumination" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination/HBoxContainer"]
layout_mode = 2
text = "Global Illumination :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbGlobalIllumination" type="CheckBox" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ViewDistance" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance/HBoxContainer"]
layout_mode = 2
text = "View Distance :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LEViewDistance" type="LineEdit" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="Shadows" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows/HBoxContainer"]
layout_mode = 2
text = "Enable Shadows :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CbShadows" type="CheckBox" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows/HBoxContainer3"]
unique_name_in_owner = true
layout_mode = 2

[node name="ShadowDistance" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance/HBoxContainer"]
layout_mode = 2
text = "Shadow Distance :"

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer3" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance"]
layout_mode = 2
size_flags_horizontal = 3

[node name="LEShadowDistance" type="LineEdit" parent="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance/HBoxContainer3"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2

[node name="ButtonBox" type="HBoxContainer" parent="MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="ApplyChanges" type="Button" parent="MarginContainer/VBoxContainer2/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Apply Changes"

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer2/ButtonBox"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiscardChanges" type="Button" parent="MarginContainer/VBoxContainer2/ButtonBox"]
unique_name_in_owner = true
layout_mode = 2
text = "Discard Changes"

[connection signal="tab_changed" from="MarginContainer/VBoxContainer2/VBoxContainer/SettingsCategory" to="." method="_on_settings_category_tab_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Aspect/HBoxContainer3/OBtnAspect" to="." method="_on_aspect_options_item_selected"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Resolution/HBoxContainer3/OBtnResolution" to="." method="_on_resolution_options_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/Fullscreen/HBoxContainer3/CbFullscreen" to="." method="_on_cb_fullscreen_toggled"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/ForcedFPS/HBoxContainer3/FPSValue" to="." method="_on_fps_value_text_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/VSync/HBoxContainer3/CbVSync" to="." method="_on_cb_v_sync_toggled"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/VideoSettingsPanel/VBoxContainer/MSaa/HBoxContainer3/OBtnMsaa" to="." method="_on_o_btn_msaa_item_selected"]
[connection signal="drag_ended" from="MarginContainer/VBoxContainer2/AudioSettingsPanel/VBoxContainer/MasterVolume/HBoxContainer3/HSMasterVolume" to="." method="_on_hs_master_volume_drag_ended"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/NetworkSettingsPanel/VBoxContainer/Port/HBoxContainer3/LEPort" to="." method="_on_le_port_text_changed"]
[connection signal="item_selected" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Quality/HBoxContainer3/ObtnQualityPreset" to="." method="_on_obtn_quality_preset_item_selected"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/AmbientOcclusion/HBoxContainer3/CbAmbientOcclusion" to="." method="_on_cb_ambient_occlusion_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/IndirectLighting/HBoxContainer3/CbIndirectLighting" to="." method="_on_cb_indirect_lighting_toggled"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/GlobalIllumination/HBoxContainer3/CbGlobalIllumination" to="." method="_on_cb_global_illumination_toggled"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ViewDistance/HBoxContainer3/LEViewDistance" to="." method="_on_le_view_distance_text_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/Shadows/HBoxContainer3/CbShadows" to="." method="_on_cb_shadows_toggled"]
[connection signal="text_changed" from="MarginContainer/VBoxContainer2/QualitySettingsPanel/VBoxContainer/ShadowDistance/HBoxContainer3/LEShadowDistance" to="." method="_on_le_shadow_distance_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/ButtonBox/ApplyChanges" to="." method="_on_apply_changes_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer2/ButtonBox/DiscardChanges" to="." method="_on_discard_changes_pressed"]
